index.css
/* General formating */
    :root {
        --color-1: #2E80CE;
        --color-2: #575F66;
        --color-3: #ffffff;
        --color-4: #C9D2DA;
        --color-5: #10375C;
        --color-6: #A9B3BB;
        
        --main-font: "Sora", sans-serif;
        --font-2: "Open Sans", sans-serif;
    }
    * {font-size: 1.6rem; font-family: var(--main-font);font-optical-sizing: auto; font-weight: 300; color: var(--color-2);}
    ::-webkit-scrollbar {background: transparent; width: 5px;}
    ::-webkit-scrollbar-thumb {background: var(--color-5);}
    
/* Common selectors */
    .content-margin {width: calc(100% - 60px * 2); margin-left: auto;margin-right: auto; max-width: 1170px;}

    .logo {width: 86px;height: 31px; background: url(./assets/images/logo/logo.svg) center / cover no-repeat; display: block;}
    .logo:hover {transform: scale(1.05);}
    /* icons */
    
    /* buttons */
    .button2 {padding: 6px 3px; display: inline-block; color: var(--color-4);}
    .button2::before {content: attr(title); display: block;;font-weight: 800; height: 0;visibility: hidden;}
    .button2:hover {color: var(--color-3); font-weight: 400;}

    .button1 {color: var(--color-3); font-weight: 400; background: var(--color-1); border-radius: 30px; border: 1px solid transparent;}
    .button1:hover {background: var(--color-3); border-color: var(--color-1); color: var(--color-1);}

    /* sections */
    .common-section {margin-top: 170px; margin-bottom: 170px;}

    /* transition options */
    a,i {transition: .3s;}
    a {text-decoration: none; }
    ul {list-style-type: none;}

    /* Headers and texts */
    h1,h2,h3,p {margin: 0;padding: 0;}
    h1,h2,h3 {font-weight: 600;line-height: 1.2;}
    h2,h3 { color: var(--color-5);}

    h1 {font-size: 7rem;color: var(--color-3);}
    h2 {font-size: 5rem;}
    
    .desc {font-size: 1.8rem; line-height: 1.6; margin-top: 18px; max-width: 468px; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient:vertical; overflow: hidden;}

    /* navigation l/r */
    .nav {display: flex;gap: 18px;}
    .nav__button {width: 36px;height: 36px;border-radius: 50%;box-sizing: border-box; border: 1px solid var(--color-2); display: flex;align-items: center;justify-content: center;}
    .nav__button {color: var(--color-2);}
    .nav__button:hover {border-color: var(--color-1); background: var(--color-1);}
    .nav__button:hover i {color: var(--color-3);}

/* **************************************************** */

/* Particular selectors */
    /* Navigation bar / Header */
    .navigation { display: flex; justify-content: center; position: sticky; top: -15px; padding-top: 15px; background: var(--color-5); z-index: 999;}
    .navigation__wrapper {padding: 15px 60px; display: flex; align-items: center;}

    .navigation__menu-list {margin-left: auto;margin-right: auto;}
        .navigation__menu-list ul {display: inline-flex; align-items: center;gap: 42px}
        .navigation__menu-list ul a {padding: 6px 3px; display: inline-flex; align-items: center;}
        .navigation__menu-list ul a:before {content: ''; display: block; width: 6px;height: 6px; border-radius: 50%; background: transparent;margin-right: 8px;color: var(--color-4); transition: .3s;}
        .navigation__menu-list ul a:hover {color: var(--color-3);}
        .navigation__menu-list ul li:hover a::before {background: var(--color-3);}

    .navigation__cta-wrapper {display: flex;align-items: center; gap: 28px;}
        .navigation__button1 {border-radius: 22px;}
        .navigation__button2 {padding: 8px 20px;}
    /*   main ~ sections  */
        /*   main/hero_container  */
        .hero {background: var(--color-5); min-height: 600px; max-height: 850px; height: calc(100vh - 110px); display: flex;}
        .hero__wrapper {display: grid; gap: 113px; align-items: center; grid-template-columns: repeat(2, 1fr);}
            /*   hero/text   */
            .hero__text {max-width: 517px;}
            .hero__title {margin-bottom: 22px;display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient:vertical; overflow: hidden;}
            .hero__desc {margin-bottom: 38px; color: var(--color-4);display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient:vertical; overflow: hidden;}
            .hero__cta-wrapper {display: flex;align-items: center; gap: 38px;}
                .hero__button1 {padding: 15px 45px; }
                .hero__call {display: inline-flex; align-items: center; color: var(--color-3); }
                .hero__tel {color: var(--color-3); white-space: break-spaces;}
                .hero__tel:hover {color: var(--color-4);}
            /*  hero/images */
            .hero__image {display: flex;align-items: center; max-width: 528px; }
                .hero__image img {object-fit: cover; border-radius: 6px;}
                .hero__image1 {aspect-ratio: 11/18; max-width: 330px; width: 62.5%;  z-index: 10;}
                .hero__image2 {aspect-ratio: 21/41; max-width: 210px; width: 37.5%; margin-left: -6px;}

        /*   main/services_container  */
        .services__wrapper {display: grid; grid-template-columns: repeat(2, 1fr);grid-column-gap: 130px;grid-row-gap: 70px; grid-template-areas: "t t" "i l"; align-items: stretch;}
        .services__wrapper > * {display: block; width: 100%;}
            /* services/meta */
            .services__meta {grid-area: t;}
                .services__meta > * {margin: 0 auto;}
                .services__meta h2 {width: 100%;text-align: center;}
                .services__desc {width: 100%;text-align: center;}
            /* services/image */
            .services__image {grid-area: i; aspect-ratio: 1/1; object-fit: cover; border-radius: 12px;}
            /* services/list >> service items */
            .services__list {grid-area: l; padding: 36px 0;}
/* ... */

